--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                 <ul>
                     <li><h1 class="head">Tharun</h1></li>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Achievements</a></li>
-                    <li><a href="#">search</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#ach">Achievements</a></li>
+                    <li><a href="#contact">Contack</a></li>
                 </ul>
             </nav>
         
@@ -77,7 +77,7 @@
             </div>
         </div>
 <!---------Achievements--------->
-        <div class="container">
+        <div class="container" id="ach">
             <h1 class="ach-h1">Achievements</h1>
             <div class="achievement-row">
                 <div class="Sports">
@@ -101,7 +101,7 @@
 
     </div>
 <!------CONTACt-->
-<div class="contact">
+<div class="contact" id="contact">
 <div class="conatiner">
     <div class="row">
         <div class="contact-left">
