--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#achieve">Achievements</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <li><a href="Gallary.html">Gallary</a>
 
-                    </li>
                     <i class=" fas fa-solid fa-xmark" onclick="closemenu()"></i>
                 </ul>
                 <i class="fas fa-solid fa-bars" onclick="openmenu()"></i>
@@ -48,8 +46,9 @@
                 </div>
                 <div class="about-col2">
                     <h2 class="subt">About Me</h2>
-                    <p>Hey there! I'm currently in my third year of B.Tech in Computer Science and Engineering. You
-                        know, the whole coding and tech world really gets me going—I love diving into those complex
+                    <p>Hey there! I'm Currently persuing B.Tech in the Department of Computer Science and Engineering IV
+                        year. You
+                        know, the whole coding and tech world really gets me going . I love diving into those complex
                         problems and coming up with solutions.</p>
 
                     <div class="tab-title">
@@ -63,13 +62,15 @@
                             <li><span>Languages</span><br>C, Python ,Java </li>
                             <li><span>Scripting</span><br>JavaScript , perl, php</li>
                             <li><span>Mark up Languages</span><br>HTML,CSS</li>
-                            <li><span>Data Base</span><br>Mysql</li>
+                            <li><span>Data Base</span><br>Mysql , FireBase</li>
+                            <li><span>Frame Work</span><br>React Js, Flask </li>
 
                         </ul>
                     </div>
                     <div class="tab-contents" id="Education">
                         <ul>
-                            <li><span>B.Tech cse</span><br>Malla Reddy College of Engineering and technology</li>
+                            <li><span>B.Tech cse</span><br>Malla Reddy College of Engineering and technology(MRCET)
+                                -(8.58 CGPA current)</li>
                             <li><span>Inter MPC</span><br>TSRJC Enkoor -97.2%</li>
                             <li><span>upto 10 - </span><br>ZPHS Chinthakani - 9.5%</li>
 
@@ -77,21 +78,45 @@
                     </div>
                     <div class="tab-contents " id="Experience">
                         <ul>
+                            <li><span>INTERNSHIP</span><br><span id="sub-pro">FULL STACK DEVELOPMENT</span><br>
+                                Company : ArchaeoByte<br>
+                                Duration : 3 months<br>
+                                Key Responsibities : Building a Real time canteen website for the College,<br>
+                                Techonolgy Used : React js and FireBase
+
+                            </li>
                             <li><span>Projects</span><br>I have gone through Some real time projects
                                 those projects really push me to exceed my limits...</li>
-                            <li><span>Projects</span>
-                                <br><span id="sub-pro"> Hospital Management</span>
-                                <p>This web project deals With real time Doctor and patient realted Information</p>
+
+                            <li><span id="sub-pro">CANTEEN WEBSITE</span><br>
+                                Theame : a Real time College Canteen Website,<br>
+                                Technology used : React js and FireBase<br>
                             </li>
-                            <li><span id="sub-pro">Student Login</span><br>
-                                <p>This Web project allows Students to log in using thier College Id and can access
-                                    their respective depeartment subjects notes</p>
+                            <li><span id="sub-pro">GROCERY STORE</span><br>
+                                Theme : A Demo of real time Grocary store<br><br>
+                                Techonolgy Used : React js and Firebase
                             </li>
-                            <li><span id="sub-pro">Rock-Paper-Sessor</span><br>It's a good Game you can play i will add
-                                it Later...</li>
-                            <li><span id="sub-pro">TO-DO List</span></li>
                             <li>
-                                <p>And Some more....</p>
+                                <br><span id="sub-pro"> HOSPITAL MANAGEMENT</span>
+                                Theame : Website that is designed to Book Doctor appoitments on our desired dates
+                                <br><br>
+                                Technology Used : Java , JSP files and MySql
+                            </li>
+                            <li><span id="sub-pro">MY NOTES</span><br>
+                                Theame : A Demo site where MRCET students can login and can Access Their depatment notes
+                                shared By other students<br><br>
+                                Techonolgy used : Django and cloud DB<br>
+                            </li>
+
+                            <li><span id="sub-pro">ROCK PAPER SCISSOR</span><br>It's a Game where Every one knows
+                                <br><br>
+                                JavaScript
+
+                            </li>
+                            <li><span id="sub-pro">TO-DO LIST</span></li>
+                            <li>
+                            <li><span id="sub-pro">WEATHER APP</span></li>
+                            <p>And Some more....</p>
                             </li>
                         </ul>
                     </div>
@@ -102,6 +127,14 @@
         <div class="container" id="achieve">
             <h1 class="ach-h1">Achievements</h1>
             <div class="achievement-row">
+                <div class="Sports">
+                    <h3 style="color: aqua;">CODEATHON</h3>
+                    <p>I secured II position in the February month edition of
+                        Neo Codeathon an all india coding contest for NeoPat Subscribers.
+                    </p>
+                    <img class="sport-img" src="./NeoPat.png" />
+
+                </div>
                 <div class="Sports">
                     <h3 style="color: aqua">sports</h3>
                     <p><span>Volley Ball</span><br>-> won Inter District 3r Telangana
@@ -122,6 +155,57 @@
         </div>
 
 
+    </div>
+    <div class="pro">
+        <div>
+            <h1 id="h1">Projects</h1>
+        </div>
+        <div class="projects">
+            <form action="https://github.com/Tharun-kumar13/ArchaeoByteInternCanteen.git" target="_blank" class="forms">
+                <button type="submit">
+                    <div class="RPS">
+                        <h2>College Canteen</h2>
+                        <img src="./Canteen.jpg" />
+
+                    </div>
+                </button>
+            </form>
+            <form action="https://github.com/Tharun-kumar13/ArchaeoInternGrocary.git" target="_blank" class="forms">
+                <button type="submit">
+                    <div class="RPS">
+                        <h2>Grocary Store</h2>
+                        <img src="./Grocary.jpg" />
+                    </div>
+                </button>
+            </form>
+            <form action="https://tharun-kumar13.github.io/WeatherForcast/weatherAPP" target="_blank" class="forms">
+                <button type="submit">
+                    <div class="WF">
+                        <h2>Weather Forcast</h2>
+                        <img src="./weather.jpg" />
+                    </div>
+                </button>
+            </form>
+            <form action="https://tharun-kumar13.github.io/RockPaperS/RPS" target="_blank" class="forms">
+                <button type="submit">
+                    <div class="RPS">
+                        <h2>Rock paper Sessor</h2>
+                        <img src="./rock-paper-scissors-neon-icons.jpg" />
+
+                    </div>
+                </button>
+            </form>
+
+            <form action="./projects/todo.html" target="_blank" class="forms">
+
+                <button type="submit">
+                    <div class="TDL">
+                        <h2>To Do List</h2>
+                        <img src="./Todo List.jpg" />
+                    </div>
+                </button>
+            </form>
+        </div>
     </div>
     <!-----HOBBIES
     <div class="hobbies">
@@ -158,6 +242,8 @@
                         <p><a href=""><i class="fa-brands fa-whatsapp"></i>+91 9666720127</a></p>
                         <P><a href="https://www.linkedin.com/in/tharun-kumar-pothanaboina-4b3435257/" target="_blank"><i
                                     class="fa-brands fa-linkedin"></i>Linkedin</a></P>
+                        <p><a href="https://github.com/Tharun-kumar13?tab=repositories"><i
+                                    class="fa-brands fa-github"></i>GitHub</a></p>
 
                     </div>
 
@@ -166,6 +252,7 @@
                 <div class="contact-left"></div>
 
             </div>
+
         </div>
 
     </div>
