--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
                                 Theame : a Real time College Canteen Website,<br>
                                 Technology used : React js and FireBase<br>
                             </li>
+                             <li><span id="sub-pro">GUESTURE VOLUME CONTROLLER</span><br>
+                                Theame : Control volume by using Hand Gestures<br>
+                                Technology used : Python , Modules : OpenCV ,mediapipe<br>
+                            </li>
                             <li><span id="sub-pro">GROCERY STORE</span><br>
                                 Theme : A Demo of real time Grocary store<br><br>
                                 Techonolgy Used : React js and Firebase
